--- a/minionsapp/app/assets/stylesheets/application.scss
+++ b/minionsapp/app/assets/stylesheets/application.scss
@@ -20,7 +20,8 @@
  */
 
 // Core variables and mixins
-// @import "bootstrap-sprockets";
+@import "bootstrap-sprockets";
+@import "bootstrap";
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 // Reset
